Docker/Ukiyo/proyectos/personales/miportfolio/portfolio-fabricio/deploy/kubernetes/portfolio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-svc
  namespace: fabricio-portfolio-ns
spec:
  type: ClusterIP
  selector:
    app: portfolio-fabricio
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30087
