Docker/Ukiyo/proyectos/personales/miportfolio/portfolio-fabricio/deploy/kubernetes/portfolio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: fabricio-portfolio-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.portfolio.fabricio.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-svc
            port:
              number: 80
